--- a/package.json
+++ b/package.json
@@ -24,11 +24,35 @@
     "mcp",
     "model-context-protocol",
     "sql-server",
+    "azure-sql",
     "database",
+    "database-analysis",
+    "database-tools",
+    "mssql",
+    "t-sql",
+    "database-management",
+    "database-administration",
     "analysis",
     "typescript",
+    "nodejs",
     "cursor",
-    "claude"
+    "claude",
+    "claude-desktop",
+    "cursor-ide",
+    "anthropic",
+    "ai-tools",
+    "llm-integration",
+    "table-analysis",
+    "stored-procedures",
+    "data-preview",
+    "column-statistics",
+    "query-execution",
+    "database-search",
+    "schema-analysis",
+    "data-exploration",
+    "database-connector",
+    "cli-tool",
+    "npm-package"
   ],
   "author": "hendrickcastro",
   "license": "MIT",
