--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.13.1",
+    "@azure/msal-common": "^14.8.0",
     "dotenv": "^16.5.0",
     "mssql": "^11.0.1"
   },
